syntax = "proto2";

import public "Robot.proto";

package robolive.protocols;

message RobotStatus {
  required RobotShortDescription description = 1;
}

message Command {

  message PuppetCall {
    required SipConfig sipConfig = 1;
    optional string videoSrc = 2;

    message SipConfig {
      required string registrarUri = 1;
      required string protocol = 2;
      optional string username = 3; // name in a SIP call, if empty - robot's name will be used (see RobotShortDescription proto message)
    }
  }

  message RestartRobot {
    optional bool updateToRecent = 1;
    optional bool rebootSystem = 2;
  }

  oneof command {
    PuppetCall puppetCall = 1;
    RestartRobot restart = 2;
  }
}

service RegistryInventory {
  rpc Join(stream RobotStatus) returns (stream Command);
}
